--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^0.27.2",
+    "mongoose": "^6.4.6",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
